fixing sections bleeding into each other

--- a/ts/apps/tradeschool/static/css/page/story.css
+++ b/ts/apps/tradeschool/static/css/page/story.css
@@ -100,6 +100,7 @@ li h4 span {
 }
 .section {
 	height: 100vh;
+	overflow: hidden;
 	width: 100%;
 	clear: both;
 	padding: 50px 0 0 0;
